test/analyze/type_check/match/divergence.exp
Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:46:13-49:5
 46 | /     | "c" -> if (true) {
    | |              ^^^^^^^^^^^
 47 | |       return;
    | | ^^^^^^^^^^^^^
 48 | |     } else {
    | | ^^^^^^^^^^^^
 49 | |     }
    | \ ^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:50:11-53:5
 50 | /     | _ -> if (true) {
    | |            ^^^^^^^^^^^
 51 | |     } else {
    | | ^^^^^^^^^^^^
 52 | |       return;
    | | ^^^^^^^^^^^^^
 53 | |     }
    | \ ^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:75:15-78:5
 75 | /     | false -> {
    | |                ^
 76 | |       1;
    | | ^^^^^^^^
 77 | |       2;
    | | ^^^^^^^^
 78 | |     }
    | \ ^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:110:15-119:5
 110 | /     | false -> match (true) {
     | |                ^^^^^^^^^^^^^^
 111 | |       | true -> match (true) {
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 112 | |         | true -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 118 | |       }
     | | ^^^^^^^
 119 | |     }
     | \ ^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:124:15-133:5
 124 | /     | false -> match (true) {
     | |                ^^^^^^^^^^^^^^
 125 | |       | true -> match (true) {
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 126 | |         | true -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 132 | |       | false -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^
 133 | |     }
     | \ ^^^^^